--- a/views/Partials/index.hbs
+++ b/views/Partials/index.hbs
@@ -9,33 +9,7 @@
     <link href="/static/css/style.css" rel="stylesheet" >
   </head>
   <body>
-<!--     {{>navbar data=details}} -->
-    <nav class="navbar border-bottom navbar-expand-lg py-4 bg-body-tertiary navbar-light bg-dark">
-  <div class="container ">
-    <a class="navbar-brand" href="#">
-        <img src="{{details.brandIconUrl}}" alt="KS" width="35" height="29">
-        {{details.brandName}} </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-        {{#each details.links}}
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
-        </li>
-         {{/each}} 
-         
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-
+    {{>navbar details=details}}
     {{>slider slides=slides}}
     {{>banner1}}
     {{>service services=services}}
