--- a/views/Partials/index.hbs
+++ b/views/Partials/index.hbs
@@ -9,7 +9,8 @@
     <link href="/static/css/style.css" rel="stylesheet" >
   </head>
   <body>
-    {{>navbar details=details}}
+<!--     {{>navbar details=details}} -->
+    {{>navbar}}
     {{>slider slides=slides}}
     {{>banner1}}
     {{>service services=services}}
