--- a/views/Partials/index.hbs
+++ b/views/Partials/index.hbs
@@ -9,8 +9,8 @@
     <link href="/static/css/style.css" rel="stylesheet" >
   </head>
   <body>
-<!--     {{>navbar details=details}} -->
-<!--     {{>navbar}}
+    {{>navbar details=details}} -->
+     {{>navbar}}
     {{>slider slides=slides}}
     {{>banner1}}
     {{>service services=services}}
@@ -18,7 +18,7 @@
     {{>banner3 banner_3=banner_3}}
     {{>Form}}
      {{>about}}
-     {{>footer}} -->
+     {{>footer}}
 
     <h1>Hi This Home Page From GitHub</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
