--- a/views/Partials/index.hbs
+++ b/views/Partials/index.hbs
@@ -9,8 +9,8 @@
     <link href="/static/css/style.css" rel="stylesheet" >
   </head>
   <body>
-    {{>navbar details=details}} -->
-     {{>navbar}}
+    {{>navbar data=details}} -->
+     
     {{>slider slides=slides}}
     {{>banner1}}
     {{>service services=services}}
