--- a/views/Partials/index.hbs
+++ b/views/Partials/index.hbs
@@ -9,8 +9,7 @@
     <link href="/static/css/style.css" rel="stylesheet" >
   </head>
   <body>
-    {{>navbar data=details}} -->
-     
+    {{>navbar data=details}}
     {{>slider slides=slides}}
     {{>banner1}}
     {{>service services=services}}
