--- a/views/Partials/navbar.hbs
+++ b/views/Partials/navbar.hbs
@@ -1,4 +1,15 @@
-<nav class="navbar border-bottom navbar-expand-lg py-4 bg-body-tertiary navbar-light bg-dark">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link href="/static/css/style.css" rel="stylesheet" >
+</head>
+<body>
+  <nav class="navbar border-bottom navbar-expand-lg py-4 bg-body-tertiary navbar-light bg-dark">
   <div class="container ">
     <a class="navbar-brand" href="#">
         <img src="{{data.brandIconUrl}}" alt="KS" width="35" height="29">
@@ -23,3 +34,7 @@
     </div>
   </div>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  </body>
+</body>
+</html>
